# translator

./: .gitignore  futurecoder_Polish copy.po  futurecoder_Polish.po  pyproject.toml
comparing_playground/: Untitled-1.ipynb  en.po  futurecoder.mo  pl.po  pl_sorted.mo  pl_sorted.po  xd.jsx
gpt4-turbo-playground/: Untitled-1.ipynb
new_way/: en.po  new_way.ipynb  pl.po  script.py  sort.ipynb
playground/: Untitled-1.ipynb  futurecoder_Polish.po
playground/categories/: chapters.po  code_bits.po  frontend.po  linting_messages.po  misc_terms.po
playground/pages/: 10_Indentation.po  11_BasicForLoopExercises.po  12_BuildingUpStrings.po  13_BuildingUpStringsExercises.po  14_BasicTerminology.po  15_IntroducingIfStatements.po  16_CombiningCompoundStatements.po  17_UnderstandingProgramsWithSnoop.po  18_IfAndElse.po  19_TheEqualityOperator.po  1_IntroducingTheShell.po  20_IntroducingElif.po  21_OtherComparisonOperators.po  22_IntroducingLists.po  23_BuildingNewLists.po  24_UsingBreak.po  25_GettingElementsAtPosition.po  26_CallingFunctionsTerminology.po  27_FunctionsAndMethodsForLists.po  2_NavigatingShellHistory.po  (+37 more)
spliting_playground/: Untitled-1.ipynb  futurecoder_English_cleaned.po  merged.po  remove_number.ipynb  sort.ipynb
texts/: AddingStrings.po  Indentation.po  IntroducingForLoops.po  IntroducingStrings.po  IntroducingTheShell.po  IntroducingVariables.po  NavigatingShellHistory.po  StoringCalculationsInVariables.po  UsingVariables.po  WritingPrograms.po
translator/: const.py  enums.py  logger.py  main.py  models.py  pricing.py  translate_service.py  util.py
(+115 files in other folders)
