[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polib = "^1.2.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.1"
watchdog = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"
mypy = "^1.7.0"
isort = "^5.12.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
